css/navbar.css
.navbar {
    background-color: #b2b2b2;
    width: 80%;
    margin: 0 auto;
    margin-bottom: 10px;
    border-radius: 3px;
}

.navbar-collapse>ul {
    margin: 0 auto;
    color: white;
    text-transform: uppercase;
}

.navbar-collapse>ul>li {
    margin: 0 100px;
}

.transparent-replace {
    display: block;
    height: 64px;
    background-color: white;
}

.transparent-replace.hidden {
    display: none;
}

